--- a/estilo.css
+++ b/estilo.css
@@ -143,7 +143,7 @@ body{
 .texto-categoria{
     text-align: center;
     background-color: black;
-    margin-top: 0;
+    margin-top: -2;
     padding-top: 8px;
     padding-bottom: 8px;
     color: white;
@@ -156,7 +156,7 @@ body{
     padding: 0;
     margin: 0;
 }
-.produtos{
+.produto{
     width: 1110px;
     margin-left: auto;
     margin-right: auto;
@@ -168,4 +168,43 @@ body{
     display: flex;
     justify-content: space-between;
     align-items: center;
+    flex-wrap: wrap;
+}
+.item-produto{
+    width: 350px;
+    border: 1px solid rgba(0, 0, 0, 13%);
+}
+.titulo-produto{
+    margin-top: 13px;
+    margin-bottom: 13px;
+    margin-left: 16px;
+    font-size: 16px;
+    font-weight: bold;
+    line-height: 23px;
+}
+.descricao-produto{
+    font-size: 13px;
+    font-weight: 500;
+    font-weight: 16px;
+    line-height: 20px;
+}
+.preco-produto{
+    margin-left: 16px;
+    margin-top: 16px;
+    margin-bottom: 10px;
+    font-size: 16px;
+    font-weight: bold;
+    line-height: 23px;
+}
+.botao-produto{
+    margin-left: 16px;
+    background-color: #9353ff;
+    padding: 9px 16px;
+    display: inline-block;
+    text-decoration: none;
+    color: white;
+    font-size: 16px;
+    line-height: 19px;
+    font-weight: 500;
+    margin-bottom: 16px;
 }
