--- a/estilo.css
+++ b/estilo.css
@@ -186,7 +186,7 @@ body{
 .descricao-produto{
     font-size: 13px;
     font-weight: 500;
-    font-weight: 16px;
+    margin-left: 16px;
     line-height: 20px;
 }
 .preco-produto{
